--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,6 @@
     "array": "c",
     "string": "c",
     "string_view": "c",
-    "span": "c",
-    "charconv": "c",
-    "mutex": "c",
-    "any": "c",
-    "complex": "c",
-    "cstdlib": "c"
+    "span": "c"
   }
 }
